--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,6 +1,13 @@
 .container {
-    margin: auto;
-    max-width: 500px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: #FFF;
     font-family: sans-serif;
   }
   
@@ -28,3 +35,7 @@
     font-weight: 700;
     margin: 3rem 0;
   }
+
+body {
+  background-color: #666;
+}
