--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -51,6 +51,12 @@
   margin: 3rem 0;
 }
 
+.footer {
+  text-align: center;
+  padding: 10px;
+  margin-top: 20px;
+}
+
 .activeNavLink {
   background-color: #add8e6; /* Light blue background color for active link */
   color: #000; /* Text color for active link */
